css/style.css
@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  --main-font-family: 'Karla', sans-serif;
  --symbol-font-family: 'Roboto Mono', monospace;
  --base-color: #030303;       /* Off black */
  --mid-color: #1C1C1C;        /* Dark grey */
  --accent-color: #FFFFFF;     /* White */
  --subheading-color: #696969; /* Grey */
  --comment-color: #6B9955;    /* Green */
}

html, body {
  width: 100%;
  height: 100%;
  font-family: var(--main-font-family);
}

body,
.project-container,
#intro-overlay,
#container-index .menu-active,
#container-index header button:hover,
#container-about .menu-active,
#container-about header button:hover,
#container-cv header button {
  background-color: var(--base-color);
}

#container-index header button a,
#container-about header button a,
#container-cv .menu-active,
#container-cv header button:hover,
#container-cv header button:hover a,
#container-cv header h1,
#container-cv header nav a {
  color: var(--base-color);
}

#container-index .menu-active,
#container-index header button:hover a,
#container-index header h1,
#container-index header nav a,
#container-about .menu-active,
#container-about header button:hover,
#container-about header button:hover a,
#container-about header h1,
#container-about header nav a,
#container-cv header button,
#container-cv header button a {
  color: var(--accent-color);
}

#container-cv .menu-active,
#container-cv header button:hover,
#container-cv nav a {
  background-color: var(--accent-color);
}

header .logo:hover h1,
header .menu:hover nav {
  display: block;
}

h1 {
  color: var(--accent-color);
  font-size: 2rem;
}

header h1, 
nav {
  display: none;
  position: fixed;
  margin: 2rem;
  padding-top: 3rem;
  font-size: 2rem;
  z-index: 100;
}

header h1 {
  text-align: left;
}

nav {
  right: 0;
  text-align: right;
}

nav a {
  display: inline-block;
  text-decoration: none;
  font-weight: bold;
  font-size: 2rem;
}

header button,
a {
  transition: 0.2s ease-out;
}

header button, 
.arrow {
  font-family: var(--symbol-font-family);
}

header button {
  position: fixed;
  width: 2.5rem;
  height: 2.5rem;
  margin: 2rem;
  border-radius: 50%;
  border: none;
  z-index: 1000; 
  font-size: 2rem;
}

header button a {
  position: relative;
  top: 0.1rem;
}

header button p {
  position: relative;
  top: -0.3rem; 
}

.logo button a {
  text-decoration: none;
}

.logo button:hover {
  transform: rotate(180deg);
}

.menu button:hover,
.menu-active {
  transform: rotate(90deg);
}

nav a:hover {
  transform: translateX(-0.5rem);
}

button:hover {
  cursor: pointer;
}

.menu button {
  right: 0;
  text-align: center;
}

#intro-overlay {
  position: absolute;
  height: 100vh;
  width: 100%;
  text-align: center;
  z-index: 1000;
}

#intro-content {
  position: fixed;
  top: 45%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.project-container {
  display: flex;
  justify-content: start;
  flex-wrap: wrap;
  align-items: center;
  padding: 0.4rem;
}

.project-template {
  display: none;
}

.project-cell {
  flex: 0 0 33.3%;
  display: flex;
  justify-content: center;
  align-items: stretch;
  padding: 0.4rem;
  box-sizing: border-box;
}

.project-item, 
.project-item-animated {
  padding: 2rem;
  background: var(--mid-color);
  color: var(--accent-color);
  cursor: none;
  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
}

.project-item-animated {
  transition: all 0.5s ease-out;
  opacity: 0;
}

.project-video, 
.project-video-animated {
  background: var(--mid-color);
}

.project-video-animated {
  opacity: 0;
}

.project-animate  {
  animation: reveal-from-top 0.8s forwards;
}

.project-video-animate  {
  animation: reveal-from-bottom 0.8s forwards;
}

/* Slide reveal and hide animations */
@keyframes reveal-from-top {
  from { clip-path: polygon(0 0, 100% 0, 100% 0, 0 0); opacity: 1; }
  to { clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); opacity: 1; }
}

@keyframes reveal-from-bottom {
  from { clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0 100%); opacity: 1;  }
  to { clip-path: polygon(0 100%, 100% 100%, 100% 0, 0 0); opacity: 1; }
}

@keyframes hide-from-bottom {
  from { clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); }
  to { clip-path: polygon(0 0, 100% 0, 100% 0, 0 0); }
}

.arrow {
  position: absolute;
  font-size: 3rem;
  right: 3rem;
  bottom: 4rem;
}

.project-title {
  display: none;
  position: absolute;
  pointer-events: none;
  font-size: 1rem;
  font-weight: 500;
}

#container-index {
  width: 100%;
  height: 100%;
  background-color: var(--mid-color);
  color: var(--accent-color);
}

#container-about {
  height: 100%;
  background-color: var(--mid-color);
  color: var(--accent-color);
}

#container-cv {
  background-color: var(--accent-color);
}

#about-content {
  padding: 6rem 6rem 0 6rem;
  height: calc(100vh - 6rem);
}

#cv-content {
  padding: 10rem 6rem 6rem 6rem;
}

#cv-content h2 {
  font-size: 2.6rem;
}

#about-content p, 
#cv-content p {
  font-size: 1rem;
  font-weight: 300;
  margin-bottom: 5rem;
}

#about-content a {
  font-weight: 300;
}

#container-about .row, 
#container-cv .row {
  margin-top: 5rem;
  overflow: hidden;
  line-height: 1.5rem;
}

#container-about .row a {
  color: var(--accent-color);
}

#container-about .row a:hover {
  background-color: var(--accent-color);
  color: var(--mid-color);
}

.comment {
  color: var(--comment-color);
  font-weight: 300;
}

#container-cv .row a {
  color: var(--mid-color);
}

#container-cv .row a:hover {
  background-color: var(--mid-color);
  color: var(--accent-color);
}

.cv-bold {
  font-weight: 600;
}

.cv-italic {
  font-style: italic;
}

#container-cv ul {
  list-style-type: "*";
  padding-left: 1rem;
  font-family: var(--symbol-font-family);
  font-size: 1rem;
}

.bullet-list {
  width: calc(100% - 2rem);
}

.bullet-list li {
  margin-top: 0.4rem;
  line-height: 1.3rem;
}

.bullet-list li span {
  position: relative;
  top: -0.13rem;
  left: 1rem;
  font-size: 1rem;
  font-family: var(--main-font-family) !important;
}

.cv-bullet-content {
  position: relative;
  left: 1rem;
}

#project-content {
  display: none;
  position: relative;
  padding: 2rem 6rem;
  text-align: center;
  background-color: var(--mid-color);
  margin: 0 auto;
  overflow: hidden;
}

#project-content #carousel,
#project-content #carousel-buttons,
#project-content #project-info {
  width: 54%;
  margin: 0 auto;
}

#carousel {
  position: relative;
}

#carousel .figure-video, 
#carousel .figure-img {
  flex: 1;
  opacity: 0;
}

#carousel .figure-video {
  position: relative;
  width: 100%;
  height: auto;
}

#carousel .figure-img {
  position: absolute;
  width: auto;
  height: 100%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

#carousel figure video,
#carousel figure img {
  height: calc(100% - 2.5rem);
}

#carousel figure video {
  width: 100%;
}

#carousel figcaption {
  height: 2.5rem;
  text-align: left;
  font-size: 0.9rem;
  font-style: italic;
  color: var(--subheading-color);
}

#carousel .current {
  opacity: 1;
}

.reveal-from-top {
  animation: reveal-from-top 0.5s forwards;
}

.hide-from-bottom {
  animation: hide-from-bottom 0.5s forwards;
}

#carousel-buttons button { 
  width: 1.8rem;
  height: 1.8rem;
  margin: 0.5rem 0.4rem 3rem 0.4rem;
  padding-bottom: 2.4px;
  background-color: var(--mid-color);
  color: var(--accent-color);
  border: 1.5px solid var(--accent-color);
  border-radius: 50%;
  font-family: var(--symbol-font-family);
  font-size: 1rem;
}

#carousel-buttons button:hover { 
  transition: 0.2s;
  background-color: var(--accent-color);
  color: var(--mid-color);
}

#project-info {
  line-height: 1.5rem;
  margin: 4rem auto;
}

#project-info .row {
  overflow: hidden;
  margin-bottom: 4rem;
}

#project-info h4, 
#project-info p, 
#project-info a {
  text-align: left;
}

.row {
  display: flex;
  gap: 1.2rem;
}

.row h4 {
  flex: 1;
}

.row div {
  flex: 2;
  text-align: left;
}

#project-info .row a {
  color: var(--accent-color);
}

#project-info .row a:hover {
  background-color: var(--accent-color);
  color: var(--mid-color);
}

.remove-underline {
  text-decoration: none;
}

.subheading, .subheading-tools {
  color: var(--subheading-color);
  font-size: 0.9rem;
}

.subheading {
  text-transform: uppercase;
  letter-spacing: 0.03rem;
}

/* ARROW BREAKPOINT */
@media screen and (max-width: 1300px) {
  .arrow {
    display: none;
  }
}

/* MOBILE BREAKPOINT */
@media screen and (max-width: 830px) {
  .project-cell {
    flex: 0 0 100%;
  }

  header h1 {
    display: none !important;
  }

  .row {
    display: block;
  }

  .row h4 {
    font-size: 1.2rem;
    margin-bottom: 0.8rem;
  }

  #project-content #carousel,
  #project-content #carousel-buttons,
  #project-content #project-info {
    width: 100%;
  }

  #carousel figure {
    max-width: 100%;
  }

  #project-content {
    padding: 2rem;
  }

  #project-info {
    width: 100%;
  }

  #project-info .row {
    padding: 0 1rem;
  }

  #about-content .row {
    margin: 0;
  }

  #about-content {
    height: calc(100vh - 11rem);
    padding: 11rem 3rem 0 3rem;
  }

  #cv-content {
    padding: 10rem 3rem 6rem 3rem;
  }
}

